<resources>
    <string name="app_name">Fleet</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Log In</string>
    <string name="login_des">To start using fleetown you have to Login/Register.</string>
    <string name="have_issue">Having Login Issue</string>
    <string name="create_new_ac">Create New Account</string>
    <string name="login_btn_text">Login</string>
    <string name="lan_english">English</string>
    <string name="lan_hindi">Hindi(हिन्दी)</string>
    <string name="lan_tamil">Tamil(தமிழ்)</string>
    <string name="lan_telugu">Telugu(తెలుగు)</string>
    <string name="lan_malayalam">Malayalam(മലയാളം)</string>
    <string name="lan_marathi">Marathi(मराठी)</string>
    <string name="lan_kannada">Kannada(ಕನ್ನಡ)</string>
    <string name="lan_title">Explore in Your Own Language/भाषा चुनिए</string>
    <string name="lan_change">Change Language</string>
    <string name="otp_title">Enter One Time Password(OTP)</string>
    <string name="otp_desc">One Time Password(OTP) has been sent to your mobile no, please enter the same here to login.</string>
    <string name="btn_sub_text">Submit</string>
    <string name="search_hint">Search for nearby landmark, locality</string>
    <string name="use_my_loc">User My Location</string>
    <string name="drv_reg_ttl">Driver Registration</string>
    <string name="new_user">New User</string>
    <string name="signup_btn">SignUp</string>
    <string name="existing_user">Existing User?</string>
    <string-array name="driver_vehicle_type">
        <item>Auto</item>
        <item>Truck</item>
        <item>Taxi</item>
    </string-array>
</resources>
