<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_lanugage_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorF4"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lan_title"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="@color/color80">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorCC"
        android:layout_below="@id/ll_lanugage_top"
        android:orientation="vertical">
    </LinearLayout>
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_line">
        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">
            <RadioButton android:id="@+id/radio_english"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_english"
                android:checked="true"/>
            <RadioButton android:id="@+id/radio_hindi"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_hindi"/>
            <RadioButton android:id="@+id/radio_tamil"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_tamil"/>
            <RadioButton android:id="@+id/radio_telugu"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_telugu"/>
            <RadioButton android:id="@+id/radio_malayalam"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_malayalam"/>
            <RadioButton android:id="@+id/radio_marathi"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_marathi"/>
            <RadioButton android:id="@+id/radio_kannada"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/lan_kannada"/>
        </RadioGroup>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_started"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnbg"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/colorWhite"
            android:text="Let's Get Started">
        </Button>
    </RelativeLayout>
</RelativeLayout>
