<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">
    <RelativeLayout
        android:id="@+id/ll_top_banner"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:minWidth="25px"
        android:minHeight="25px"
        android:layout_marginBottom="10dp"/>
    <!--android:background="@drawable/topbanner"-->

    <RelativeLayout
        android:layout_below="@id/ll_top_banner"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:id="@+id/ll_bse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/ll_login_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_login_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/tv_login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_des"
                    android:textSize="13dp"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                style="@style/MaterialInput"
                android:layout_below="@id/ll_login_label">
                <EditText
                    android:id="@+id/et_mobile_number"
                    style="@style/LoginInput"
                    android:maxLength="14"
                    android:layout_width="match_parent"
                    android:inputType = "number"
                    android:layout_height="52dp"
                    android:digits="0123456789"
                    android:hint="Mobile Number*"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:id="@+id/ll_btn_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_mobile"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnbg"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:text="@string/login_btn_text"
                    android:gravity="center_vertical">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_below="@id/ll_btn_base">
                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12dp"
                    android:text="dasdas">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_login_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_below="@id/ll_top_banner">
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_having_issue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/have_issue"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_new_account"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create_new_ac"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_change_language"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/lan_change"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:id="@+id/tv_orange_line"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_black_line"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>
</RelativeLayout>