<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark">>
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/leftarrow">
        </TextView>
        <TextView
            android:id="@+id/tv_back_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/drv_reg_ttl"
            android:textSize="20dp"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorWhite">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/ll_top_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_bse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <LinearLayout
                android:id="@+id/ll_login_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_login_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/tv_login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_des"
                    android:textSize="13dp"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                style="@style/MaterialInput"
                android:layout_below="@id/ll_login_label">
                <EditText
                    android:id="@+id/et_name"
                    style="@style/LoginInput"
                    android:maxLength="14"
                    android:layout_width="match_parent"
                    android:inputType = "textNoSuggestions"
                    android:layout_height="52dp"
                    android:hint="Name*"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                style="@style/MaterialInput"
                android:layout_below="@id/text_input_name">
                <EditText
                    android:id="@+id/et_mobile_number"
                    style="@style/LoginInput"
                    android:maxLength="14"
                    android:layout_width="match_parent"
                    android:inputType = "textNoSuggestions"
                    android:layout_height="52dp"
                    android:hint="Mobile Number*"/>
            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/sp_vehicle_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/LoginInput"/>
            <LinearLayout
                android:id="@+id/ll_btn_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_vehicle_type"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/btn_login"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnbg"
                    android:textAlignment="center"
                    android:textSize="16dp"
                    android:text="@string/signup_btn"
                    android:gravity="center_vertical">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_below="@id/ll_btn_base">
                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12dp"
                    android:text="dasdas">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_login_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_below="@id/ll_top_banner">
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_having_issue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/have_issue"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_new_account"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/existing_user"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_change_language"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/lan_change"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:id="@+id/tv_orange_line"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_black_line"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>
