<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otp_title"
            android:textSize="18dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorWhite">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rl_base"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:id="@+id/ll_otp_msg_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_otp_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/otp_desc"
                android:textAlignment="center"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_otp_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:id="@+id/et_first"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_second"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_third"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_forth"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_fifth"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginRight="10dp">
            </EditText>
            <EditText
                android:id="@+id/et_sixth"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:textAlignment="center">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_btn_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_mobile"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textColor="@android:color/white"
                android:text="@string/btn_sub_text"
                android:gravity="center_vertical">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_counter_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Resent OTP in (0:30)"
                android:textAlignment="center"
                android:textSize="14dp"
                android:textColor="@color/color80">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_login_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_below="@id/ll_top_banner">
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_having_issue"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/have_issue"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_new_account"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create_new_ac"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@color/colorF4"/>
        <TextView
            android:id="@+id/tv_change_language"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/lan_change"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/color80"/>
        <TextView
            android:id="@+id/tv_orange_line"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_black_line"
            android:layout_height="10dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>
